<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="sound_amp_vibration"><![CDATA[Sound & vibration]]></string>
    <string name="sound">Sound</string>
    <string name="none">None</string>
    <string name="vibrate">Vibrate</string>
    <string name="between_work_rest">Between work/rest</string>
    <string name="title_amp_time"><![CDATA[Title & Time]]></string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="working_time">Working time</string>
    <string name="break_time">Break time</string>
    <string name="work">Work</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="work_amp_rest_time"><![CDATA[Work & Rest Time]]></string>
    <string name="what_is_pomodoro_technique">What is pomodoro technique ?</string>
    <string name="why_pomodoro_interval_timer">Why Pomodoro Interval Timer ?</string>
    <string name="close">CLOSE</string>
    <string name="update_required">Update required !</string>
    <string name="for_better_experience_please_update_our_application_nthere_are_crucial_bug_fixes_in_the_next_version_n_thank_you">For better experience please update our application. There are crucial bug fixes in the next version.\n Thank you! </string>
    <string name="update">UPDATE</string>
    <string name="how_to_use">How to use</string>
    <string name="technique_that_is_used_to_focus_better_on_what_you_are_doing_there_are_working_and_resting_intervals_nfor_example_you_work_25_minutes_and_rest_for_5_minutes">Technique that is used to focus better on what you are doing. There are working and resting intervals.\nFor example you work 25 minutes and rest for 5 minutes.</string>
    <string name="_1_pick_a_task_you_need_to_finish_n2_set_the_timer_for_25_minutes_and_start_working_n3_when_the_25_minutes_pass_the_our_tomato_timer_will_ring_n4_now_rest_for_5_minutes_n5_repeat_from_no_2_until_you_finish_the_task">1. Pick a task you need to finish.\n2. Set the timer for 25 minutes and start working.\n3. When the 25 minutes pass our Tomato timer will ring.\n4. Now rest for 5 minutes.\n5. Repeat from no.2 until you finish the task.</string>
</resources>
