<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    android:padding="24dp"
    tools:context="com.cooldeveloper.pomodoro_tomatotimer.update.UpdateDialogFragment">

    <TextView
        android:id="@+id/tvUpdateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_required"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUpdateImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tvUpdateTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_shutter_speed_24px" />


    <TextView
        android:id="@+id/tvUpdateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivUpdateImage"
        android:text="@string/for_better_experience_please_update_our_application_nthere_are_crucial_bug_fixes_in_the_next_version_n_thank_you"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUpdateDescription"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/shape_border_primary_color"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

</RelativeLayout>
