<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="androidx.navigation.fragment.NavHostFragment"
    tools:context="com.cooldeveloper.pomodoro_tomatotimer.timer.TimerView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackground"
        tools:context=".timer.TimerActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_for_timer_fragment" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryLightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tvMinutesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="24"
            android:textColor="@color/primaryTextColor"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvSecondsNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvMinutesNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSecondsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="30"
            android:textColor="@color/primaryTextColor"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/minutes"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvMinutesNumber"
            app:layout_constraintStart_toStartOf="@+id/tvMinutesNumber"
            app:layout_constraintTop_toBottomOf="@+id/tvMinutesNumber" />

        <TextView
            android:id="@+id/tvSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/seconds"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tvSecondsNumber"
            app:layout_constraintStart_toStartOf="@+id/tvSecondsNumber"
            app:layout_constraintTop_toBottomOf="@+id/tvSecondsNumber" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_play_arrow_white_24dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/shape_border_primary_color"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="Not started"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            app:srcCompat="@drawable/ic_clear_red_24dp" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:alpha="0.75"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/primaryRed"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
